--- a/src/app/component/contact/contact.component.html
+++ b/src/app/component/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="responsive-container">
-  <span class="contact-header">For all booking, licensing & print inquires</span>
+  <span class="contact-header">For all booking, licensing & print inquiries</span>
   <div class="contact-btn-container">
-    <button (click)="mail()" type="button" class="contact-btn">CONTACT</button>
+    <button (click)="mail()" type="button" aria-label="Send e-mail" class="contact-btn">CONTACT</button>
   </div>
 
   <div class="divider-container">
