--- a/src/app/component/gallery-page/gallery-page.component.html
+++ b/src/app/component/gallery-page/gallery-page.component.html
@@ -5,5 +5,5 @@
     will deliver exceptional, high quality photographs everytime.
   </p>
   <gallery></gallery>
-  <div *ngIf="showScrollToTop" (click)="scroll.scrollToTop()" class="scroll-top">TOP</div>
+  <button *ngIf="showScrollToTop" (click)="scroll.scrollToTop()" type="button" aria-label="Go to top of page" class="scroll-top">TOP</button>
 </div>
