--- a/src/scss/swatches.scss
+++ b/src/scss/swatches.scss
@@ -16,6 +16,7 @@ $green-50: #008000;
 $blue-80: #0063cc;
 $blue-90: #00438a;
 $blue-100: #002f5c;
+$light-blue: #c1e0fe;
 
 $linkedin: #0e76a8;
 $youtube: #c4302b;
