--- a/src/app/component/carousel/carousel.component.html
+++ b/src/app/component/carousel/carousel.component.html
@@ -1,10 +1,10 @@
 <div class="carousel-container">
-  <div class="carousel-btn prev" (click)="arrowClick('prev')">
+  <button type="button" aria-label="Previous image in slideshow" class="carousel-btn prev" (click)="arrowClick('prev')">
     <i class="icon-chevron-left"></i>
-  </div>
-  <div class="carousel-btn next" (click)="arrowClick('next')">
+  </button>
+  <button type="button" aria-label="Next image in slideshow" class="carousel-btn next" (click)="arrowClick('next')">
     <i class="icon-chevron-right"></i>
-  </div>
+  </button>
   <div class="indicators">
     <div *ngFor="let img of images; index as i" (click)="indicatorClick(i)" class="index"></div>
   </div>
