--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -6,6 +6,10 @@
   font-family: 'Tw Cen MT', -apple-system, BlinkMacSystemFont, 'Segoe UI',
   Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol';
+
+  &:focus {
+    outline: 3px solid $light-blue;
+  }
 }
 
 html,
@@ -92,4 +96,11 @@ ul {
   cursor: pointer;
   box-shadow: 0px 2px 6px $shadow;
   border-radius: 1px;
+  border: 0;
+}
+
+/* Overwrite Lightbox caption style */
+.lb-caption {
+  font-size: 16px !important;
+  font-weight: normal !important;
 }
