--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,12 +1,12 @@
 <div class="footer">
   <div class="footer-link-container">
-    <a class="footer-link instagram" href="https://www.instagram.com/jaredgkraemer" aria-label="instagram" target="_blank">
+    <a class="footer-link instagram" href="https://www.instagram.com/jaredgkraemer" aria-label="instagram" target="_blank" rel="noopener">
       <span class="icon-instagram"></span>
     </a>
-    <a class="footer-link linkedin" href="https://www.linkedin.com/in/jaredgkraemer" aria-label="linkedin" target="_blank">
+    <a class="footer-link linkedin" href="https://www.linkedin.com/in/jaredgkraemer" aria-label="linkedin" target="_blank" rel="noopener">
       <span class="icon-linkedin"></span>
     </a>
-    <a class="footer-link youtube" href="https://www.youtube.com/user/JKraemerProductions" aria-label="youtube" target="_blank">
+    <a class="footer-link youtube" href="https://www.youtube.com/user/JKraemerProductions" aria-label="youtube" target="_blank" rel="noopener">
       <span class="icon-youtube"></span>
     </a>
   </div>
