--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,7 +2,7 @@
 
   <div class="logo-container">
     <a class="logo-link" aria-label="Home link" routerLink="/home">
-      <img class="logo" src="../../../assets/graphics/logo.png" alt="Jared G Kraemer Photography logo"/>
+      <img class="logo" src="../../../assets/icons/logo.png" alt="Jared G Kraemer Photography logo"/>
     </a>
     <button (click)="menu()" type="button" aria-label="Navigation menu toggle" class="hamburger">
       <div class="patty top"></div>
