--- a/src/app/component/gallery/gallery.component.scss
+++ b/src/app/component/gallery/gallery.component.scss
@@ -18,8 +18,12 @@
 .gallery-col {
   flex-basis: 0;
   flex-grow: 1;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   transition-duration: 0.3s;
+
+  @include sm {
+    margin: 0 1rem;
+  }
 
   @include md {
     margin: 0 2rem;
@@ -43,4 +47,17 @@ img {
     transition: box-shadow 0.2s ease-in-out;
     box-shadow: 0px 2px 18px $shadow-light;
   }
+}
+
+.gallery-divider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.gallery-divider {
+  width: 90%;
+  border-bottom: 1px solid $gray-70;
 }
