update lightbox and scss

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,6 +1,6 @@
-@import './swatches.scss';
-@import './breakpoints.scss';
-@import './fonts.scss';
+@import 'swatches.scss';
+@import 'breakpoints.scss';
+@import 'fonts.scss';
 
 * {
   font-family: 'Tw Cen MT', -apple-system, BlinkMacSystemFont, 'Segoe UI',
