--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -3,9 +3,7 @@
 @import 'fonts.scss';
 
 * {
-  font-family: 'Tw Cen MT', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-  Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: 'Roboto', -apple-system, 'Helvetica Neue', Arial, sans-serif;
 
   &:focus {
     outline: 3px solid $light-blue;
